// Copyright 2019 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package exonum.examples.cryptocurrency_advanced;

import "helpers.proto";

/// Transfer `amount` of the currency from one wallet to another.
message Transfer {
  // Name of sender's wallet.
  string from = 1;
  // Name of receiver's wallet.
  string to = 2;
  // Amount of currency to transfer.
  uint64 amount = 3;
  // Auxiliary number to guarantee non-idempotence of transactions.
  uint64 seed = 4;
}

// Issue `amount` of the currency to the `wallet`.
message Issue {
// Name of receiver's wallet.
  string to = 1;
  // Issued amount of currency.
  uint64 amount = 2;
  // Auxiliary number to guarantee non-idempotence of transactions.
  uint64 seed = 3;
}

// Create wallet with the given `name`.
message CreateWallet {
  // Name of the new wallet.
  string name = 1;
  // Public keys.
  repeated exonum.PublicKey pub_keys = 2;
  // Quorum size
  uint32 quorum = 3;
}

// Wallet information stored in the database.
message Wallet {
// Name of the wallet.
  string name = 1;
  // `PublicKey` of the wallet.
  repeated exonum.PublicKey pub_keys = 2;
  // Quorum size
  uint32 quorum = 3;
  // Current balance of the wallet.
  uint64 balance = 4;
  // Length of the transactions history.
  uint64 history_len = 5;
  // `Hash` of the transactions history.
  exonum.Hash history_hash = 6;
}

message TransferProposal {
  // Name of sender's wallet.
  string from = 1;
  // Name of receiver's wallet.
  string to = 2;
  // Amount of currency to transfer.
  uint64 amount = 3;
  // Auxiliary number to guarantee non-idempotence of transactions.
  uint64 seed = 4;
  // signers (who already signed)
  uint32 signs = 5;
}